add google maps client integration scaffolding